.deploy/k8s/manifest.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: metad-prod-api-lb
spec:
  type: ClusterIP
  selector:
    app: metad-prod-api
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: olap
spec:
  type: ClusterIP
  selector:
    app: metad-prod-olap
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: ClusterIP
  selector:
    app: metad-prod-webapp
  ports:
    - name: webapp
      protocol: TCP
      port: 4200
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metad-prod-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metad-prod-api
  template:
    metadata:
      labels:
        app: metad-prod-api
    spec:
      containers:
        - name: metad-prod-api
          image: registry.cn-hangzhou.aliyuncs.com/metad/ocap-api:2.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     scheme: HTTP
          #     port: 3000
          #   initialDelaySeconds: 3
          #   periodSeconds: 60
          #   successThreshold: 1
          #   failureThreshold: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metad-prod-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metad-prod-webapp
  template:
    metadata:
      labels:
        app: metad-prod-webapp
    spec:
      containers:
        - name: metad-prod-webapp
          image: registry.cn-hangzhou.aliyuncs.com/metad/ocap-webapp:2.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metad-prod-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metad-prod-website
  template:
    metadata:
      labels:
        app: metad-prod-website
    spec:
      containers:
        - name: metad-prod-website
          image: registry.cn-hangzhou.aliyuncs.com/metad/website:2.3.0
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metad-prod-olap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metad-prod-olap
  template:
    metadata:
      labels:
        app: metad-prod-olap
    spec:
      containers:
        - name: metad-prod-olap
          image: registry.cn-hangzhou.aliyuncs.com/metad/ocap-olap:main
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              scheme: HTTP
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
